Changing background color

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
+
+$primary: #1dd1a1;
+$secondary: #10ac84;
+
+body {
+  background-color: $primary;
+}
