--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -4,8 +4,11 @@
       <form>
         <p class="is-size-4 mb-5 has-text-weight-semibold">Login in with<br>Kanbanize api token</p>
         <div class="field">
-          <div class="control">
-            <input class="input is-medium is-rounded" type="text" name="kanbanize" placeholder="board.kanbanize.com" required [(ngModel)]="formData.board"/>
+          <div class="control has-icons-right">
+            <input class="input is-medium is-rounded" type="text" name="kanbanize" placeholder="Your board" required [(ngModel)]="formData.board"/>
+            <span class="icon is-right is-justify-content-flex-end">
+              .kanbanize.com
+            </span>
           </div>
         </div>
         <div class="field">
